[package]
name = "rustbx"
version = "0.0.1"
edition = "2021"
description = "Brain extraction tool using ONNX Runtime"

[dependencies]
nifti = { version = "0.17", features = ["ndarray_volumes"] }
ndarray = "0.16"
ort = "=2.0.0-rc.11"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
glob = "0.3"
